{
  "version": 4,
  "terraform_version": "1.12.1",
  "serial": 72,
  "lineage": "20bee8d3-350a-3b92-c387-41e993065d16",
  "resources": [
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05ee755be0cd7555c",
            "arn": "arn:aws:ec2:us-west-2:568838099888:instance/i-0d05a568b888a9e2a",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d05a568b888a9e2a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a12940ef437ef6fc",
            "private_dns": "ip-10-0-0-92.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.92",
            "public_ip": "54.186.44.40",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0107dc34232209791",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dc52663dd0360bc6",
            "tags": {
              "Name": "poc-prod-ec2-0"
            },
            "tags_all": {
              "Name": "poc-prod-ec2-0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0edc9287a2b5e6b21"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.compute.aws_security_group.instance",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05ee755be0cd7555c",
            "arn": "arn:aws:ec2:us-west-2:568838099888:instance/i-06ec66c6287d31de9",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06ec66c6287d31de9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0721c81e28ed6981f",
            "private_dns": "ip-10-0-1-69.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.69",
            "public_ip": "44.247.106.72",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0abfa84c33ef95427",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-070d7227d67d24934",
            "tags": {
              "Name": "poc-prod-ec2-1"
            },
            "tags_all": {
              "Name": "poc-prod-ec2-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0edc9287a2b5e6b21"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.compute.aws_security_group.instance",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:568838099888:security-group/sg-0edc9287a2b5e6b21",
            "description": "Allow SSH and HTTP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0edc9287a2b5e6b21",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "poc-prod-security_group",
            "name_prefix": "",
            "owner_id": "568838099888",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "poc-prod-security_group"
            },
            "tags_all": {
              "Name": "poc-prod-security_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-03a6e3d93a75f9153"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:568838099888:internet-gateway/igw-00ea33ef1c2d2efa8",
            "id": "igw-00ea33ef1c2d2efa8",
            "owner_id": "568838099888",
            "tags": {
              "Name": "poc-prod-igw"
            },
            "tags_all": {
              "Name": "poc-prod-igw"
            },
            "vpc_id": "vpc-03a6e3d93a75f9153"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:568838099888:route-table/rtb-08c1a65a9e414ed4d",
            "id": "rtb-08c1a65a9e414ed4d",
            "owner_id": "568838099888",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00ea33ef1c2d2efa8",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "poc-prod-public_route_table"
            },
            "tags_all": {
              "Name": "poc-prod-public_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-03a6e3d93a75f9153"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_internet_gateway.this",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0375247c062def6b7",
            "route_table_id": "rtb-08c1a65a9e414ed4d",
            "subnet_id": "subnet-0dc52663dd0360bc6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_internet_gateway.this",
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0511d239eb1767d4b",
            "route_table_id": "rtb-08c1a65a9e414ed4d",
            "subnet_id": "subnet-070d7227d67d24934"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_internet_gateway.this",
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:568838099888:subnet/subnet-0dc52663dd0360bc6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dc52663dd0360bc6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "568838099888",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "poc-prod-subnet-0"
            },
            "tags_all": {
              "Name": "poc-prod-subnet-0"
            },
            "vpc_id": "vpc-03a6e3d93a75f9153"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.this",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:568838099888:subnet/subnet-070d7227d67d24934",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-070d7227d67d24934",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "568838099888",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "poc-prod-subnet-1"
            },
            "tags_all": {
              "Name": "poc-prod-subnet-1"
            },
            "vpc_id": "vpc-03a6e3d93a75f9153"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.this",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:568838099888:vpc/vpc-03a6e3d93a75f9153",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0664ca6f60313fe8e",
            "default_route_table_id": "rtb-01b99d124e29e14d5",
            "default_security_group_id": "sg-0a5f9263ccb825a94",
            "dhcp_options_id": "dopt-01d3009f562170e4c",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03a6e3d93a75f9153",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01b99d124e29e14d5",
            "owner_id": "568838099888",
            "tags": {
              "Name": "poc-prod-vpc"
            },
            "tags_all": {
              "Name": "poc-prod-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}